fix, and improvements: scroll, slide logplot

--- a/source/app/components/wi-d3/wi-d3.less
+++ b/source/app/components/wi-d3/wi-d3.less
@@ -6,6 +6,7 @@ wi-d3 {
     .d3-region {
         position: relative;
         display: flex;
+        flex-direction:row;
         position: relative;
         //width: 100%;
         flex: 1;
