--- a/source/app/components/wi-logplot/template/wi-logplot.html
+++ b/source/app/components/wi-logplot/template/wi-logplot.html
@@ -10,7 +10,7 @@
         </wi-slidingbar>
     </div>
     <div class="track-area">
-        <wi-d3 style="width: 100%; flex: 1; display: flex;"
+        <wi-d3 style="width: 100%; flex: 1; display: flex;flex-direction:column;"
                name='{{wiLogplot.wiD3AreaName}}'
                wi-logplot-ctrl='wiLogplot'>
         </wi-d3>
