--- a/source/app/components/wi-logplot/wi-logplot.less
+++ b/source/app/components/wi-logplot/wi-logplot.less
@@ -39,11 +39,11 @@ wi-logplot {
             margin-left: 0;
             flex: 1;
             display: flex;
-            flex-direction: row;
+            //flex-direction: row;
 
-            wi-d3 {
-                width: 100%; flex: 1; display: flex;
-            }
+            /*wi-d3 {
+                width: 100%; flex: 1; display: flex; flex-direction-column;
+            }*/
         }
     }
     .crop-display {
