--- a/source/less/main.less
+++ b/source/less/main.less
@@ -483,3 +483,13 @@ input[type].display-none, .display-none {
 .font-size-32 {
     font-size: 32px;
 }
+.noUi-horizontal div.noUi-handle {
+    height:14px;
+}
+div.noUi-horizontal {
+    height:3px;
+}
+div.noUi-handle:after, div.noUi-handle:before {
+    height:4px;
+    top: 4px;
+}
