--- a/source/app/components/wi-d3-crossplot/wi-d3-crossplot.html
+++ b/source/app/components/wi-d3-crossplot/wi-d3-crossplot.html
@@ -8,23 +8,25 @@
 <div class='d3-crossplot-region' style="flex:1;display:flex; flex-direction:column;margin-left:14px">
     <h4>Crossplot: {{wiD3Crossplot.crossplotModel.properties.name}}</h4>
     <h5>Reference: [{{wiD3Crossplot.crossplotModel.properties.pointsets[0].intervalDepthTop}} - {{wiD3Crossplot.crossplotModel.properties.pointsets[0].intervalDepthBottom}}]</h5>
-    <div class='crossplot-container position-relative' wi-right-click='wiD3Crossplot.showContextMenu($event)' id='{{wiD3Crossplot.crossplotAreaId}}'>
+    <div class='crossplot-container position-relative' id='{{wiD3Crossplot.crossplotAreaId}}'>
         <div style="display:flex;flex-direction:column;flex:1;">
             <div ng-if="wiD3Crossplot.crossplotModel.properties.showHistogram"
                 style="flex-basis: 25%;display: flex;flex-direction:row;">
                 <div style='flex-basis: 20%'></div>
                 <div id="{{wiD3Crossplot.name + 'HistogramX'}}" style='flex:1;'
-                    wi-element-ready="wiD3Crossplot.histogramXReady();">
+                    wi-element-ready="wiD3Crossplot.histogramXReady();"
+                    wi-right-click='wiD3Crossplot.showHisContextMenu($event, "x")'>
                 </div>
             </div>
             <div style='flex: 1; display:flex;flex-direction:row;'>
                 <div ng-if="wiD3Crossplot.crossplotModel.properties.showHistogram"
                     style='flex-basis:20%;position:relative;'
                     id="{{wiD3Crossplot.name + 'HistogramY'}}"
-                    wi-element-ready="wiD3Crossplot.histogramYReady();">
+                    wi-element-ready="wiD3Crossplot.histogramYReady();"
+                    wi-right-click='wiD3Crossplot.showHisContextMenu($event, "y")'>
                     <div class='transform-group'></div>
                 </div>
-                <div ng-dblclick="wiD3Crossplot.propertiesDialog();" style='flex:1' class='vi-crossplot-container'
+                <div ng-dblclick="wiD3Crossplot.propertiesDialog();" style='flex:1' class='vi-crossplot-container' wi-right-click='wiD3Crossplot.showContextMenu($event)'
                     wi-element-ready='wiD3Crossplot.onReady()'>
                     <div ng-if='wiD3Crossplot.loading' wi-element-ready="wiD3Crossplot.onLoading();" style="position:absolute;top:0;left:0;bottom:0;right:0" id="{{wiD3Crossplot.name + '-spinner'}}"></div>
                 </div>
