--- a/source/less/main.less
+++ b/source/less/main.less
@@ -487,7 +487,8 @@ input[type].display-none, .display-none {
     height:14px;
 }
 div.noUi-horizontal {
-    height:3px;
+    height:5px;
+    //cursor: pointer;
 }
 div.noUi-handle:after, div.noUi-handle:before {
     height:4px;
