fix ui-select caret

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -627,3 +627,4 @@ input[type=checkbox].input-check {
 	height:100%;
 }
 //end import from inventory inentory dialog 
+.ui-select-toggle > .caret { pointer-events: none }
