fix: restrict dialog dragging; refine logplot scrolling

--- a/source/app/components/wi-d3/wi-d3.html
+++ b/source/app/components/wi-d3/wi-d3.html
@@ -1,6 +1,6 @@
 <div wi-element-ready='wiD3.onReady()' wi-right-click='wiD3.showContextMenu($event)' id='{{wiD3.plotAreaId}}' class='d3-region'>
  <!--    <svg id='{{wiD3.svgId}}' class='d3-region-svg' width='100%' height='100%'></svg> -->
 </div>
-<div ng-show="wiD3.contentWidth > wiD3.sliderWidth + 21" wi-element-ready='wiD3.onSliderReady()' style="display:block;margin:10px;flex-basis:5px;">
+<div ng-show="wiD3.contentWidth > wiD3.sliderWidth + 41" wi-element-ready='wiD3.onSliderReady()' style="display:block;margin:10px 20px;flex-basis:5px;backgroun-color:yellow">
     <div style="width:{{wiD3.sliderWidth}}px" class='slider-container'></div>
 </div>
