--- a/source/less/main.less
+++ b/source/less/main.less
@@ -488,9 +488,13 @@ input[type].display-none, .display-none {
 }
 div.noUi-horizontal {
     height:5px;
-    //cursor: pointer;
 }
 div.noUi-handle:after, div.noUi-handle:before {
     height:4px;
     top: 4px;
+    background-color: black;
+}
+div.noUi-base {
+    background-color: #888;
+    cursor: pointer;
 }
