--- a/source/components/wi-multi-input/wi-multi-input.less
+++ b/source/components/wi-multi-input/wi-multi-input.less
@@ -4,6 +4,7 @@ wi-multi-input{
     }
     .multi-input-menu {
         padding: 1em;
+        min-width: -webkit-fill-available;
     }
     .caret {
         float: right;
