--- a/source/app/components/wi-condition-node/wi-condition-node.less
+++ b/source/app/components/wi-condition-node/wi-condition-node.less
@@ -19,16 +19,22 @@ wi-condition-node {
         border: 1px solid rgb(209, 202, 202);
     }
     .condition-item-selected {
-        border: 1px solid red;
+        // border: 1px solid red;
+        background: steelblue;
     }
-    .condition-item-selected select,
-    .condition-item-selected wi-multi-input button,
-    {
-        border-color: red;
-        // color: red;
-    }
+    // .condition-item-selected select,
+    // .condition-item-selected wi-multi-input button,
+    // {
+    //     border-color: red;
+    // }
     .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-1, .col-xs-8, .col-xs-6, .container-fluid {
         padding-left: 3px;
         padding-right: 3px;
+    }
+    wi-multi-input{
+        .multi-input-selected{
+            height: auto;
+            padding: 2px 8px;
+        }
     }
 }
