--- a/source/less/main.less
+++ b/source/less/main.less
@@ -443,8 +443,10 @@ input[type].display-none, .display-none {
 }
 .user-wrapper{
     position: absolute;
-    top: 15px;
-    right: 15px;
+    //top: 15px;
+    //right: 15px;
+    top: 2px;
+    right: 2px;
 }
 
 .width-100-percent {
