--- a/source/app/components/wi-user/wi-user.less
+++ b/source/app/components/wi-user/wi-user.less
@@ -2,11 +2,19 @@ wi-user {
     &>div {
         //background-color: transparent;
         //background-color: rgba(255,255,255,0.7);
+        /*
         background-color: rgba(128,128,128,0.7);
         margin: auto;
         border: 1px solid #888;
         padding: 2px;
-        box-shadow: 5px 5px 5px #888;
+        box-shadow: inset 5px 5px 5px #888;
+        border-radius: 5px;
+        */
+        background-color: rgba(158, 156, 156, 0.7);
+        margin: auto;
+        border: 1px solid #888;
+        padding: 2px;
+        box-shadow: inset 1px 1px 2px #888;
         border-radius: 5px;
     }
     .user-img-holder {
@@ -14,6 +22,7 @@ wi-user {
         width: 100%;
         background-color: rgba(255,255,255,0.7);
         padding: 2px;
+        display:none;
     }
     .user-img {
         margin: auto;
@@ -29,6 +38,6 @@ wi-user {
         text-overflow: ellipsis;
         font-size: 10px;
         text-align:center;
-        margin-bottom: 5px;
+        //margin-bottom: 5px;
     }
 }
