--- a/source/components/wi-spinner/wi-spinner.html
+++ b/source/components/wi-spinner/wi-spinner.html
@@ -1,3 +1,3 @@
-<div wi-element-ready='wiSpinner.onReady();' ng-show="wiSpinner.shown" class="spinner-backdrop">
+<div wi-element-ready='wiSpinner.onReady();' ng-show="wiSpinner.shown" class="spinner-backdrop" wi-right-click="">
     <div id='spinnerHolder'></div>
 </div>
