--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -128,6 +128,7 @@
 .vi-image-zone-header {
     position: relative;
     padding: 1px 0 1px 0;
+    height: 19px;
 
     .vi-image-zone-header-name {
         display: inline-block;
@@ -139,12 +140,14 @@
         font-size: 10px;
         z-index: 1;
         cursor: default;
+        height: 15px;
     }
 
     .vi-image-zone-header-fill {
         position: absolute;
         top: 0;
         left: 0;
+        height: 100%;
     }
 }
 
