prepare for demo

--- a/source/app/components/wi-crossplot/template/wi-crossplot.html
+++ b/source/app/components/wi-crossplot/template/wi-crossplot.html
@@ -7,7 +7,7 @@
           <wi-zone name="{{wiCrossplot.getWiZoneCtrlName();}}" zones="wiCrossplot.zoneArr" active-zone="wiCrossplot.crossplotModel.properties.pointsets[0].activeZone" on-zone-ctrl-ready="wiCrossplot.onZoneCtrlReady"></wi-zone>
         </wi-container>
     </div>
-    <wi-d3-crossplot style="width: 100%; flex: 1; display: flex;"
+    <wi-d3-crossplot style="width: 100%; flex: 1; display: flex;margin-left:14px;"
         name='{{wiCrossplot.wiD3CrossplotName}}'
         wi-crossplot-ctrl='wiCrossplot'>
     </wi-d3-crossplot>
