--- a/source/app/components/wi-d3/wi-d3.less
+++ b/source/app/components/wi-d3/wi-d3.less
@@ -23,4 +23,7 @@ wi-d3 {
         cursor: move !important;
     }
     overflow: hidden;
+    .vi-crossplot-footer-container {
+        height: 0px;
+    }
 }
