new style dialog shading properties

--- a/source/less/main.less
+++ b/source/less/main.less
@@ -432,6 +432,12 @@ input[type].display-none, .display-none {
 .padding-left-1em {
     padding-left: 1em;
 }
+.padding-left-1_5em {
+    padding-left: 1.5em;
+}
+.padding-left-2_5em {
+    padding-left: 2.5em;
+}
 .padding-left-60px {
     padding-left: 60px;
 }
