--- a/source/app/components/wi-d3/wi-d3.less
+++ b/source/app/components/wi-d3/wi-d3.less
@@ -10,7 +10,7 @@ wi-d3 {
         position: relative;
         //width: 100%;
         flex: 1;
-        padding-left: 3px;
+        //padding-left: 3px;
         .d3-region-svg {
             position: absolute;
             z-index: 10;
@@ -25,5 +25,12 @@ wi-d3 {
     overflow: hidden;
     .vi-crossplot-footer-container {
         height: 0px;
+    }
+    .vi-track-container {
+        //margin-left: -3px;
+    }
+    .vi-track-vertical-resizer {
+        margin-left: -5px;
+        //border: 1px solid blue;
     }
 }
