--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -10,7 +10,8 @@
 .vi-zone-track-container {
 
     .vi-track-plot-container {
-        border: 1px solid black;
+        border-left: 1px solid black;
+        border-right: 1px solid black;
 
         .vi-zone-line {
             cursor: row-resize;
