--- a/source/less/main.less
+++ b/source/less/main.less
@@ -420,6 +420,9 @@ input[type].display-none, .display-none {
 .padding-left-20px {
     padding-left: 20px;
 }
+.padding-left-4_5em {
+    padding-left: 4.5em;
+}
 .padding-left-4em {
     padding-left: 4em;
 }
