update inport from inventory

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -620,10 +620,9 @@ input[type=checkbox].input-check {
 }
 
 #center-inventory {
-	position: sticky;
-	top: 50%;
-	transform: translateY(-50%);
 	text-align: center;
+	height: 100%;
+	padding-top: 30%;
 }
 
 #right-inventory {
