--- a/source/app/components/wi-inventory-treeview/wi-inventory-treeview.html
+++ b/source/app/components/wi-inventory-treeview/wi-inventory-treeview.html
@@ -1,6 +1,6 @@
 <wi-base-treeview
 	name="{{wiInventoryTreeview.treeviewName}}"
 	config='wiInventoryTreeview.config'
-	onclickfunction='wiInventoryTreeview.onClick'
+	on-click-function='wiInventoryTreeview.onClick'
 	container='wiInventoryTreeview.container'>
 </wi-base-treeview>
