fix blank choice, wi-curve-listing css

--- a/source/app/components/wi-curve-listing/wi-curve-listing.less
+++ b/source/app/components/wi-curve-listing/wi-curve-listing.less
@@ -56,17 +56,21 @@ wi-curve-listing{
         
                 thead>tr>th{
                     width:140px;
+                    min-width: 140px;
                     &:first-child{
                         width: 50px;
+                        min-width: 50px;
                     }
                 }
                 tbody>tr>td{
+                    min-width: 140px;
                     width:140px;
                     &:first-of-type{
                         background: #ccc;
                     }
                 }
                 tbody>tr>th{
+                    min-width: 50px;
                     width: 50px;
                     text-align: center;
                 }
