--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -535,7 +535,11 @@ input[type=checkbox].input-check {
 	border-radius: 5px;
 	border: 1px solid #333;
 }
-
+.ui-select-choices-row{
+	&>span{
+		height: 26px;
+	}
+}
 .ui-select-match .ui-select-toggle {
 	height: 24px;
 	padding: 2px 8px;
