--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -622,7 +622,11 @@ input[type=checkbox].input-check {
 #center-inventory {
 	text-align: center;
 	height: 100%;
-	padding-top: 30%;
+	.btn {
+		padding: 5px;
+		border: 0;
+		height: 100%;
+	}
 }
 
 #right-inventory {
