--- a/source/app/components/wi-curve-listing/wi-curve-listing.less
+++ b/source/app/components/wi-curve-listing/wi-curve-listing.less
@@ -26,6 +26,9 @@ wi-curve-listing{
                 display: flex;
             }
         }
+        .modified{
+            background: orange;
+        }
     }
 
     .editing{
@@ -82,5 +85,9 @@ wi-curve-listing{
     }
     .nanValue{
         background: steelblue;
+    }
+    .editor{
+        border-width: 0;
+        box-shadow: none;
     }
 }
