fix image display and preview

--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -19,10 +19,11 @@
     }
 }
 
-.vi-image-zone-track-container {
+.vi-image-track-container {
 
     .vi-track-plot-container {
-        border: 1px solid black;
+        border-left: 1px solid black;
+        border-right: 1px solid black;
 
         .vi-image-zone-line {
             cursor: row-resize;
