--- a/source/app/components/wi-curve-listing/wi-curve-listing.html
+++ b/source/app/components/wi-curve-listing/wi-curve-listing.html
@@ -33,7 +33,7 @@
 					<tr ng-repeat="curve in wiCurveListing.curvesArr track by curve.id"
 					ng-class="{modified: curve.modified}">
 						<td style="flex:2">{{curve.name}}
-							<span class="fa fa-undo" ng-if="curve.modified" ng-click="wiCurveListing.reverseModified(curve.id)" title='Discard Changes'></span>
+							<span class="fa fa-undo undo" ng-if="curve.modified" ng-click="wiCurveListing.reverseModified(curve.id)" title='Discard Changes'></span>
 						</td>
 						<td style="flex:2">{{curve.datasetName}}</td>
 						<td style="flex:1;text-align:center">
@@ -52,7 +52,7 @@
 					<tr>
 						<th>Index</th>
 						<th>Depth</th>
-						<th ng-repeat="curve in wiCurveListing.curvesData[wiCurveListing.currentIndex]" ng-if="curve.show">{{curve.datasetCurve}}</th>
+						<th ng-repeat="curve in wiCurveListing.curvesData[wiCurveListing.currentIndex]" ng-if="curve.show" title='{{curve.datasetName}}'>{{curve.name}}</th>
 					</tr>
 				</thead>
 				<tbody>
