import from inventory, fix a lot

--- a/source/app/components/wi-inventory/import-model-existed-modal.html
+++ b/source/app/components/wi-inventory/import-model-existed-modal.html
@@ -3,17 +3,17 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
-                <h4>Merge data</h4>
+                <h4>Data conflict</h4>
             </div>
             <div class="modal-body">
                 <div class="container-fluid">
                     <div class="row">
-                        
+                        //TODO: item name existed!
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button class='btn btn-default' ng-click='wiModal.onLoadButtonClicked()'><span class="ok-16x16"></span>&nbsp;Ok
+                <button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'><span class="ok-16x16"></span>&nbsp;Ok
                 </button>
                 <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span
                     class="close-16x16"></span>&nbsp;Cancel
