--- a/source/less/main.less
+++ b/source/less/main.less
@@ -509,14 +509,14 @@ div.noUi-base {
     background-color: #888;
     cursor: pointer;
 }
-.table-body-scroll tbody {
-	display: block;
-	height: 200px;
-	max-height:300px;
-	overflow-y:scroll;
-}
-.table-body-scroll  thead, tbody tr {
-	display:table;
-	width:100%;
-	table-layout:fixed;
-}
+// .table-body-scroll tbody {
+// 	display: block;
+// 	height: 200px;
+// 	max-height:300px;
+// 	overflow-y:scroll;
+// }
+// .table-body-scroll  thead, tbody tr {
+// 	display:table;
+// 	width:100%;
+// 	table-layout:fixed;
+// }
