--- a/source/components/wi-slidingbar/wi-slidingbar.less
+++ b/source/components/wi-slidingbar/wi-slidingbar.less
@@ -37,4 +37,8 @@ wi-slidingbar {
     //border: 1px solid white;
     background-color: rgba(255, 128, 128, 0.5);
   }
+  .sliding-handle-border.too-small {
+    background-color: rgba(255, 128, 128, 1);
+    transition: background-color 0.2s ease-in-out;
+  }
 }
