--- a/source/app/components/wi-inventory/wi-inventory.html
+++ b/source/app/components/wi-inventory/wi-inventory.html
@@ -1,3 +1,19 @@
+<style>
+    .inventory-side {
+        flex-basis: calc(50% - 30px);
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        overflow: hidden;
+        margin: 10px;
+        padding: 10px;
+        box-shadow: inset 1px 1px 1px #e1e1e1;
+        background-color: #ffffff;
+    }
+    .inventory-center {
+        flex: 1;
+        position:relative;
+    }
+</style>
 <div class="inventory-toolbar-wrapper">
 	<wi-toolbar>
 		<wi-button icon="file-import-16x16" layout="icon-left" type="small" label='Import' tooltip="Import" handler="wiInventory.onLoadButtonClicked" disabled="{{(!wiInventory.importItems.length).toString()}}"></wi-button>
@@ -5,24 +21,36 @@
 		<wi-button icon="reload-16x16" layout="icon-left" type="small" label='Refresh' tooltip="Refresh" handler="wiInventory.onRevertAllButtonClicked" ng-if="!wiInventory.importItems.length"></wi-button>
 	</wi-toolbar>
 </div>
-<div class="inventory-main container-fluid">
-	<div class="row">
-			<div id="left-inventory" class="col-xs-5">
-					<wi-inventory-treeview name="projectTreeview" config="wiInventory.projectConfig" container="wiInventory" selected-node="wiInventory.projectSelectedNode"></wi-inventory-treeview>
-			</div>
-			<div id="center-inventory" class="col-xs-1">
-					<div class="row">
-							<button class="btn btn-default" title="import" ng-click='wiInventory.importButtonClicked()' ng-class="{'disabled': !wiInventory.importValid}">
-									<span class="arrow-left-32x32"></span>
-							</button>
-					</div>
-					<!-- <br>
-					<div class="row">
-							<button class="btn btn-default" ng-click=''><span class="arrow-right-32x32"></span></button>
-					</div> -->
-			</div>
-			<div id="right-inventory" class="col-xs-6">
-					<wi-inventory-treeview name="inventoryTreeview" config="wiInventory.inventoryConfig" container="wiInventory" selected-node="wiInventory.inventorySelectedNode"></wi-inventory-treeview>
-			</div>
-	</div>
+<div class="inventory-main" style="display:flex;flex-direction:row;">
+    <div class="inventory-side">
+        <wi-inventory-treeview name="projectTreeview" config="wiInventory.projectConfig" container="wiInventory" selected-node="wiInventory.projectSelectedNode"></wi-inventory-treeview>
+    </div>
+    <div class="inventory-center">
+        <button class="btn btn-default" style="padding:6px 6px;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);"
+            title="import" ng-click='wiInventory.importButtonClicked()' 
+            ng-class="{'disabled': !wiInventory.importValid}">
+            <span class="arrow-left-16x16"></span>
+        </button>
+    </div>
+    <div class="inventory-side">
+        <wi-inventory-treeview name="inventoryTreeview" config="wiInventory.inventoryConfig" container="wiInventory" selected-node="wiInventory.inventorySelectedNode"></wi-inventory-treeview>
+    </div>
 </div>
+
+<!--
+<div class="inventory-main container-fluid">
+    <div id="left-inventory" class="col-xs-5">
+        <wi-inventory-treeview name="projectTreeview" config="wiInventory.projectConfig" container="wiInventory" selected-node="wiInventory.projectSelectedNode"></wi-inventory-treeview>
+    </div>
+    <div id="center-inventory" class="col-xs-2">
+        <div class="row">
+            <button class="btn btn-default" title="import" ng-click='wiInventory.importButtonClicked()' ng-class="{'disabled': !wiInventory.importValid}">
+                <span class="arrow-left-32x32"></span>
+            </button>
+        </div>
+    </div>
+    <div id="right-inventory" class="col-xs-5">
+        <wi-inventory-treeview name="inventoryTreeview" config="wiInventory.inventoryConfig" container="wiInventory" selected-node="wiInventory.inventorySelectedNode"></wi-inventory-treeview>
+    </div>
+</div>
+-->
